<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="15dp"
    app:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/education_article_image"
            android:layout_width="match_parent"
            android:layout_height="170dp" />

        <TextView
            android:id="@+id/edu_article_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:paddingTop="10sp"
            android:text="@string/professor_stephen_hawking_has_away_at_the_age_of_76"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/edu_article_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:paddingTop="10sp"
            android:text="@string/by_unknownuser_12_hours_ago"
            android:textColor="#636161" />

        <TextView
            android:id="@+id/edu_article_fields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:paddingTop="5sp"
            android:text="@string/in_science_technology"
            android:textColor="#636161" />
    </LinearLayout>
</android.support.v7.widget.CardView>